<resources>
    <string name="app_name">HomeControl</string>
    <string name="label_service_bound">Service</string>
    <string name="label_server_connected">Server</string>
    <string name="label_server_authenticated">Server</string>
    <string name="service_bound">bound</string>
    <string name="service_unbound">unbound</string>
    <string name="server_connected">connected</string>
    <string name="server_disconnected">disconnected</string>
    <string name="server_authenticated">authenticated</string>
    <string name="server_not_authenticated">not authenticated</string>

    <string name="listen_btn_listen">Listen</string>
    <string name="listen_btn_listening">Listening…</string>
    <string name="reply_time">It\'s %1$tl:%1$tM</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_home_assistant">Home Assistant server settings</string>
    <string name="pref_ha_use_https">Connect via HTTPS</string>
    <string name="pref_ha_server">Server</string>
    <string name="pref_ha_port">Port</string>
    <string name="pref_ha_password">Password</string>

    <!-- Error message strings -->
    <string name="not_implemented_yet">Sorry, not implemented yet.</string>
    <string name="error_could_not_play">Sorry, could not play radio</string>
    <string name="error_could_not_pause">Sorry, could not stop radio</string>
    <string name="error_could_switch_on_light">Sorry, I could not switch on the light</string>
    <string name="error_could_switch_off_light">Sorry, I could not switch off the light</string>

</resources>
