<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_ha_use_https"
        android:title="@string/pref_ha_use_https"/>

    <EditTextPreference
        android:key="pref_ha_server"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_ha_server"/>

    <EditTextPreference
        android:key="pref_ha_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="8123"
        android:inputType="numberDecimal"
        android:title="@string/pref_ha_port"/>

    <EditTextPreference
        android:inputType="textPassword"
        android:key="pref_ha_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_ha_password"/>
</PreferenceScreen>
