<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cat.guillempages.homecontrol.MainActivity">

    <TextView
        android:id="@+id/main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/listen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen_btn_listen"
        app:layout_constraintBottom_toTopOf="@+id/main_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/label_service_bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_service_bound"/>

    <TextView
        android:id="@+id/service_bound_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/service_unbound"
        app:layout_constraintStart_toEndOf="@+id/label_service_bound"/>

    <TextView
        android:id="@+id/label_service_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_server_connected"
        app:layout_constraintTop_toBottomOf="@+id/label_service_bound"/>

    <TextView
        android:id="@+id/service_connected_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/server_disconnected"
        app:layout_constraintStart_toEndOf="@+id/label_service_connected"
        app:layout_constraintTop_toBottomOf="@+id/service_bound_status"/>

    <TextView
        android:id="@+id/label_service_authenticated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_server_authenticated"
        app:layout_constraintTop_toBottomOf="@+id/label_service_connected"/>

    <TextView
        android:id="@+id/service_authenticated_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/server_not_authenticated"
        app:layout_constraintStart_toEndOf="@+id/label_service_authenticated"
        app:layout_constraintTop_toBottomOf="@+id/service_connected_status"/>

</android.support.constraint.ConstraintLayout>
